--- a/opt-in-123456.html
+++ b/opt-in-123456.html
@@ -71,15 +71,15 @@
               <div id="donut-example"></div>
               <div class="dnut_lables">
                 <div class="carbohydrate">
-                  <img src="/assets/carbohydrate-min.svg" />
+                  <img src="./assets/carbohydrate-min.svg" />
                   <span>33 %</span>
                 </div>
                 <div class="protein">
-                  <img src="/assets/protein-min.svg" />
+                  <img src="./assets/protein-min.svg" />
                   <span>46 %</span>
                 </div>
                 <div class="fat">
-                  <img src="/assets/fat-min.svg" />
+                  <img src="./assets/fat-min.svg" />
                   <span>21 %</span>
                 </div>
               </div>
@@ -87,21 +87,21 @@
             <div class="dnut-list dnut-aside">
               <div class="fp_freeplan_list_items">
                 <div class="plan_item">
-                  <img src="/assets/fat.svg" />
+                  <img src="./assets/fat.svg" />
                   <div class="text">
                     <div class="label">Fat</div>
                     <div class="value" id="fatValue">58 G</div>
                   </div>
                 </div>
                 <div class="plan_item">
-                  <img src="/assets/protein.svg" />
+                  <img src="./assets/protein.svg" />
                   <div class="text">
                     <div class="label">Protein</div>
                     <div class="value" id="proteinValue">115 G</div>
                   </div>
                 </div>
                 <div class="plan_item">
-                  <img src="/assets/carbohydrate.svg" />
+                  <img src="./assets/carbohydrate.svg" />
                   <div class="text">
                     <div class="label">Carbohydrates</div>
                     <div class="value" id="carbohydrateValue">82 G</div>
